fix: icons alignment in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -136,15 +136,14 @@ nav {
 }
 
 .social {
-    display: flex;
     align-content: center;
     text-align: center;
 }
 
 .social a {
     margin-top: 0.5em;
-    font-size: 3.5em;
-    padding: 0.3em;
+    font-size: 3em;
+    padding: 0.2em;
     margin-bottom: .15em;
     margin-right: 0;
     color: var(--clr-dark);
@@ -185,9 +184,7 @@ nav {
         width: calc(100% + 1.5em);
     }
     
-    .social a {
-        padding: .5em;
-    }
+}
 
 /* My Services */
 
@@ -234,6 +231,10 @@ nav {
     
     .service + .service {
         margin-left: 2em;
+    }
+
+    .social a {
+        font-size: 4em;
     }
 }
 
